# Robo-GUI

./: Cargo.toml  README.md
src/: animation.rs  camera.rs  hints.rs  lib.rs  markers.rs  renderer.rs  texture_manager.rs
src/components/: ambient_components.rs  drawable_components.rs  mod.rs  movement_components.rs  robot_components.rs
src/gui_elements/: draw.rs  item.rs  menus.rs  mod.rs  scene.rs  square.rs  text.rs
src/systems/: mod.rs  movement_systems.rs  robot_system.rs
