[package]
name = "robo_gui"
version = "0.1.0"
edition = "2021"
authors = ["thegavereguy"]
#publish = ["kellnr"]
include = ["/src/*", "/assets"]


[dependencies]
robotics_lib = {git= "https://github.com/Advanced-Programming-2023/Robotic-Lib/", branch="master"}
#robotics_lib = {path= "../Robotic-Lib"}

specs = "0.20"
specs-derive = "0.4"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]

