[package]
name = "robo_gui"
version = "0.1.0"
edition = "2021"
authors = ["thegavereguy"]
#publish = ["kellnr"]
include = ["/src/*", "/assets"]


[dependencies]
#robotics_lib = {git= "https://github.com/Advanced-Programming-2023/Robotic-Lib/", branch="master"}
#robotics_lib = {path= "../Robotic-Lib"}
robotics_lib = {registry = "kellnr"}

oxagaudiotool = {registry = "kellnr", version = "0.2"}

specs = "0.20"
specs-derive = "0.4"
rand="0.8.5"
charting_tools = { version = "1.0.5", registry = "kellnr" }

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["image", "ttf"]

