[package]
name = "robo_gui"
version = "0.2.0"
edition = "2021"
authors = ["Enrico Dalla Cia"]
include = ["/src/*", "/assets"]

[dependencies]
robotics_lib = {registry = "kellnr"}
#robotics_lib = {git= "ssh://git@github.com/Advanced-Programming-2023/Robotic-Lib.git", branch="master"}


specs = "0.20"
specs-derive = "0.4"
rand="0.8.5"

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["image"]


